# pySimpleMask

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  README_DOCKER.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  simple_mask_ui.py  tox.ini
docs/: conf.py  installation.rst  make.bat  usage.rst
docs/superpowers/plans/: 2026-06-15-mvc-refactor.md  2026-06-16-adjacent-pixels-outlier.md  2026-06-16-find-center-improvement.md  2026-06-17-cli-qmap.md  2026-06-17-qmap-summary-report.md  2026-07-10-web-mask.md  2026-07-10-web-partition.md  2026-07-10-web-viewer.md  2026-07-10-xpcs-result-reader.md  2026-07-13-cli-subcommands.md  2026-07-13-web-download-partition.md  2026-07-13-web-upload-result-file.md  2026-07-15-gui-log-scale-checkbox.md  2026-07-15-hide-detector-shape-from-param-tree.md  2026-07-15-rawdata-frame-browser.md  2026-07-15-single-mask-apply-button.md
docs/superpowers/specs/: 2026-06-15-mvc-refactor-design.md  2026-06-15-reader-refactor-design.md  2026-06-16-find-center-improvement-design.md  2026-07-10-web-mask-design.md  2026-07-10-web-partition-design.md  2026-07-10-web-viewer-design.md  2026-07-10-xpcs-result-reader-design.md  2026-07-20-mask-partition-confirmation-dialogs-design.md
examples/: headless_workflow.py
pysimplemask/: __init__.py  area_mask.py  cli.py  compare_results.py  file_reader.py  find_center.py  hdf2sax.py  mask_gui.py  pyqtgraph_mod.py  pysimplemask.py  qmc_saver.py  qpartition_utilis.py  rigaku_reader.py  rotate_roi.py  scattering_geometry.py  simple_mask_kernel.py  simple_mask_ui.py  simplemask_kernel.py  simplemask_ui.py  table_model.py
pysimplemask/reader/: __init__.py  file_reader.py  hdf2sax.py  imm_reader_with_plot.py  rigaku_reader.py  test_file_reader.py
pysimplemask/reader/aps_8idi/: reader.py
pysimplemask/reader/aps_9idc/: reader.py
pysimplemask/reader/aps_reader/: __init__.py  hdf_handler.py  rigaku_3M_handler.py  rigaku_handler.py  xpcs_dataset.py
pysimplemask/shadow_finder/: locate_shadow.py
pysimplemask/ui/: generate_ui_code.sh  mask.ui
scripts/: run_container.sh
src/pysimplemask/: __init__.py  aps_qmap.py  aps_qmap_full.py  area_mask.py  cli.py  ellipse_util.py  file_handler.py  file_reader.py  find_center.py  pysimplemask.py  qmap.py  simplemask_kernel.py  simplemask_main.py  simplemask_ui.py  table_model.py  utils.py
src/pysimplemask/core/: __init__.py  ellipse_util.py  file_handler.py  find_center.py  io.py  mask.py  model.py  outlier_removal.py  partition.py  qmap.py  rasterize.py  report.py
src/pysimplemask/core/reader/: __init__.py  base_reader.py  io_utils.py  metadata.py
src/pysimplemask/gui/: __init__.py  app.py
src/pysimplemask/gui/control/: main_window.py
src/pysimplemask/gui/model/: roi_extract.py  table_model.py
src/pysimplemask/gui/view/: compile_ui.py  mask.ui  ui_mask.py  widgets.py
src/pysimplemask/reader/: __init__.py  base_reader.py  io_utils.py  utils.py
src/pysimplemask/reader/APS_8IDI/: aps_8idi_reader.py  xpcs_dataset.py
src/pysimplemask/reader/APS_9IDD/: aps_9idd_reader.py
src/pysimplemask/reader/aps_reader/: hdf_handler.py  rigaku_handler.py  xpcs_dataset.py
src/pysimplemask/reader/beamlines/: __init__.py  aps_8idi.py  aps_9idd.py
src/pysimplemask/reader/formats/: base.py  hdf.py  imm.py  rigaku.py
src/pysimplemask/ui/: mask.ui
src/pysimplemask/web/: callbacks.py  image_utils.py  layout.py  mask_callbacks.py  mask_layout.py  partition_callbacks.py  partition_layout.py  server.py  shape_utils.py
tests/: __init__.py
tests/cli/: test_build_qmap.py  test_subcommands.py
tests/core/: conftest.py  test_find_center.py  test_io.py  test_model_headless.py  test_outlier_removal.py  test_partition_helpers.py  test_rasterize.py  test_report.py
tests/core/reader/: conftest.py  test_dispatch.py  test_hdf.py  test_imm.py  test_metadata.py  test_rigaku.py  test_xpcs_result_reader.py
tests/gui/: __init__.py  test_main_window.py
tests/reader/: conftest.py  test_dispatch.py  test_hdf.py  test_imm.py  test_metadata.py  test_rigaku.py
tests/web/: test_image_utils.py  test_mask_layout.py  test_partition_layout.py  test_shape_utils.py  test_web_import.py
(+10 files in other folders)
