[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pysimplemask"
dynamic = ["version"]
description = "A GUI for creating mask and q-partition maps for scattering patterns in preparation for SAXS/WAXS/XPCS data reduction"
readme = "README.rst"
authors = [
  {name = "Miaoqi Chu", email = "mqichu@anl.gov"}
]
maintainers = [
  {name = "Miaoqi Chu", email = "mqichu@anl.gov"}
]
license = {text = "MIT license"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "hdf5plugin",
    "scikit-image",
    "matplotlib",
    "pyqtgraph",
    "PySide6",
    "astropy",
    "imagecodecs",
    "tiffile"
]

[project.optional-dependencies]
dev = [
    "coverage",  # Testing
    "mypy",  # Type checking
    "pytest",  # Testing
    "ruff"  # Linting
]

[project.scripts]
pysimplemask = "pysimplemask.cli:main"

[project.urls]
bugs = "https://github.com/AZjk/pysimplemask/issues"
changelog = "https://github.com/AZjk/pysimplemask/blob/master/changelog.md"
homepage = "https://github.com/AZjk/pysimplemask"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-timestamp"

[tool.setuptools.package-data]
"*" = ["*.*"]

# ---- Mypy ----
[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
