[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pysimplemask"
dynamic = ["version"]
description = "A GUI for creating mask and q-partition maps for scattering patterns in preparation for SAXS/WAXS/XPCS data reduction"
readme = "README.md"
authors = [{ name = "Miaoqi Chu", email = "mqichu@anl.gov" }]
maintainers = [{ name = "Miaoqi Chu", email = "mqichu@anl.gov" }]
license = { file = "LICENSE" }

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "hdf5plugin",
  "scikit-image",
  "matplotlib",
  "pyqtgraph",
  "PySide6>=6.8",
  "astropy",
  "imagecodecs",
  "tifffile",
]

[project.optional-dependencies]
dev = [
  "coverage", # Testing
  "mypy",     # Type checking
  "pytest",   # Testing
  "ruff",     # Linting
]

[project.scripts]
pysimplemask = "pysimplemask.cli:main"
pysimplemask-combine-qmaps = "pysimplemask.cli:combine_qmaps"

[project.urls]
bugs = "https://github.com/AdvancedPhotonSource/pySimpleMask/issues"
changelog = "https://github.com/AdvancedPhotonSource/pySimpleMask/blob/master/changelog.md"
homepage = "https://github.com/AdvancedPhotonSource/pySimpleMask"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"*" = ["*.*"]
"pysimplemask.resources" = ["*.svg"]
"pysimplemask.gui.view" = ["*.ui"]

# ---- Ruff ----
[tool.ruff]
# ui_mask.py is generated by pyside6-uic; never hand-edited, so don't lint it.
extend-exclude = ["src/pysimplemask/gui/view/ui_mask.py"]

# ---- Mypy ----
[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
